--- a/Pages/Canvas.razor
+++ b/Pages/Canvas.razor
@@ -50,7 +50,7 @@
     [Parameter]
     [JsonIgnore]
     public RenderFragment ChildContent { get; set; }
-   
+
     public void OnClick(MouseEventArgs args)
     {
 
@@ -122,13 +122,13 @@
 
     internal Node CheckTagLevelNode(int id)
     {
-        foreach(Node node in Nodes)
-        {
-            if(node._idCount == id)
-            {
-                return node;
-            }
-        }
+        //foreach(Node node in Nodes)
+        //{
+        //    if(node._idCount == id)
+        //    {
+        //        return node;
+        //    }
+        //}
         return null;
     }
 
